任意のメッセージ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,5 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
-@import "slick-carousel/slick/slick";
-@import "slick-carousel/slick/slick-theme";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
